# t-docagent-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.sh  pyproject.toml  start.sh
cers/: tma-ADCA-CA.crt
src/: app.py  config.py  initializer.py  scopes.md
src/ag_ui/core/: __init__.py  events.py  model_types.py
src/ag_ui/encoder/: __init__.py  encoder.py
src/agents/basic/: __init__.py  agent.py  chat.py  state.py  tools.py
src/agents/react/: __init__.py  base.py
src/agents/react/conversational_agent/: agent.py  state.py  tools.py
src/agents/react/worker_agent/: agent.py  state.py  tools.py
src/agents/training_agent/: __init__.py  agent.py  state.py
src/agents/training_agent/nodes/: __init__.py  analyze_metrics.py  extraction.py  mapping.py
src/handlers/: action_package.py  agent.py  audit.py  auth.py  basic_agent.py  conversation.py  datasource.py  document.py  document_format.py  document_intelligence.py  document_type.py  document_work_item.py  knowledge_base.py  llm_configuration.py  onboarding.py  runbook.py  scope.py  token.py  training_state_manager.py  user.py
src/handlers/agents/: __init__.py  base.py  conversation.py  worker.py
src/helpers/: agui_event.py  audit.py  jwt_auth.py  mcp_client.py  mindsdb_client.py  pgvector_client.py  pubsub.py
src/helpers/llm/: README.md  chat.py  config.py  embedding.py  vision.py
src/helpers/parser/: base_parser.py  file_parser.py  url_parser.py
src/helpers/parser/file_processor/: __init__.py  base.py  doc_file.py  factory.py  table.py  url.py
src/middleware/: api_audit.py  license_validation.py
src/models/: __init__.py  action_package.py  agent.py  api_audit_log.py  conversation.py  document_content.py  document_format.py  document_type.py  document_work_item.py  kb_document.py  knowledge_base.py  llm_configuration.py  message.py  role.py  runbook.py  tag.py  token.py  user.py
src/routers/: action_package.py  agent.py  audit.py  auth.py  conversation.py  conversational_agent.py  datasource.py  document_format.py  document_intelligence.py  document_type.py  document_work_item.py  health_check.py  knowledge_base.py  license.py  llm.py  llm_configuration.py  onboarding.py  role.py  runbook.py  sample_agent.py  scope.py  token.py  user.py  worker_agent.py
src/schemas/: action_package.py  agent.py  audit.py  auth.py  chunks.py  conversation.py  datasource.py  document.py  document_content.py  document_format.py  document_intelligence.py  document_type.py  document_work_item.py  export.py  knowledge_base.py  license.py  llm.py  llm_configuration.py  llm_parser.py  message.py  model_config.py  pagination.py  response.py  runbook.py  tag.py  token.py  training.py  user.py
src/services/: __init__.py  license_validator.py
src/services/knowledge_base/: base.py  chunk.py  config.py  document.py  knowledge_base.py  parser.py  tag.py  vector_db.py
src/settings/: default_config.yaml
src/settings/mongodb/: db_collections.py  validators.py
src/settings/prompts/: conversational_agent.py  document_intelligence.py  parser.py  training.py  worker_agent.py
src/settings/scopes/: default_scopes.py
src/static/: conversational_agent.html  download.html  hitl_reason_email_tml.html  invitation_email_tml.html  reset_password_email_tml.html  stream.html  success_email_tml.html  token_management.html  token_management_with_onboarding.html  worker_agent.html
src/utils/: auth.py  checkpointer.py  common.py  constants.py  enums.py  functions.py  image.py  llm.py
src/utils/logger/: custom_logging.py  handlers.py
