[project]
name = "DIMS-AI"
authors = [
    { name = "Danh Nguyen", email = "ntdanh@tma.com.vn" },
    { name = "Than Vo", email = "vmthan@tma.com.vn" },  
    { name = "Trieu Nguyen", email = "nvtrieu@tma.com.vn" }
]
description = ""
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PYYAML==6.0.2",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.2",
    "fastapi==0.115.12",
    "pydantic-settings==2.9.1",
    "pydantic[email]==2.11.7",
    "beanie==1.29.0",
    "orjson==3.10.18",
    "langchain==0.3.25",
    "langgraph==0.6.7",
    "langchain-openai==0.3.28",
    "langchain-google-genai==2.1.12",
    "ruff>=0.11.11",
    "minio==7.2.15",
    "pillow==11.2.1",
    "aiofiles==24.1.0",
    "miniopy-async==1.23.1",
    "langchain-mcp-adapters==0.1.8",
    "redis[hiredis]==6.2.0",
    "langgraph-checkpoint-mongodb==0.1.4",
    "fastmcp==2.10.6",
    "tabulate>=0.9.0",
    "mindsdb-sdk==3.4.6",
    "pymupdf>=1.26.3",
    "pandas>=2.3.1",
    "pycryptodomex>=3.23.0",
    "bcrypt==4.0.1",
    "psycopg2-binary>=2.9.7",
    "pgvector>=0.2.0",
    "pyjwt==2.10.1",
    "passlib==1.7.4",
    "asyncpg>=0.30.0",
    "fastapi-mail>=1.5.0",
    "langchain-community>=0.3.25",
    "langchain-experimental>=0.3.4",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pyexcel-xlsx>=0.6.1",
    "html2text>=2025.4.15",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "matplotlib==3.10.6",
]

[project.optional-dependencies]
dev = [
]


# Config formatting for Flake8
[tool.flake8]
max-line-length = 130
exclude = [".git", "__pycache__"]


# Config formatting for Pylint
[tool.pylint.design]
max-args=15
max-attributes = 10
max-parents = 15
max-locals = 40
max-positional-arguments = 15
max-returns = 10
min-public-methods = 0
max-branches = 30
max-nested-blocks = 8 
max-statements = 70

[tool.pylint.format]
max-line-length = 130

[tool.pylint.messages-controls]
disable = """no-member,
        unrecognized-option,
        import-error,
        relative-beyond-top-level,
        wrong-import-order,
        ungrouped-imports,
        import-outside-toplevel,
        broad-exception-caught,
        missing-module-docstring,
        missing-class-docstring,
        missing-function-docstring,
        arguments-differ,
        protected-access,
        logging-fstring-interpolation,
        function-redefined,
        duplicate-code,
        no-name-in-module,
        fixme,
"""


# Config formatting for Ruff
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]

extend-exclude = ["*.ipynb", "./scripts/*", "src/helpers/llm/custom_google.py"]

# Same as Black.
line-length = 130
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "W",
    "E",
    "F",
    "N",
    "I",
    "B",
    "A",
    "S",
    "YTT",
    "RUF",
    "FAST",
    "ASYNC",
    "UP",
    "ANN",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
]
ignore = ["TRY301", "INP001", "B008"]
fixable = ["ALL"]  # Allow all fixable rules to be auto-fixed
unfixable = []  # No rules are explicitly unfixable

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
lint = [
    "pylint>=3.3.7",
    "ruff>=0.11.11",
]
